# awesome-lumos

./: .gitignore  CI_STATUS.md  CLAUDE.md  CONTRIBUTING.md  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  mirror-gitlab.yml
examples/dao-governance/: Anchor.toml  README.md
examples/dao-governance/app/src/: generated.ts  governance-client.ts
examples/dao-governance/programs/dao-governance/: Cargo.toml
examples/dao-governance/programs/dao-governance/src/: generated.rs  lib.rs
examples/dao-governance/schema/: governance.lumos
examples/defi-staking/: Anchor.toml  README.md
examples/defi-staking/app/src/: generated.ts  staking-client.ts
examples/defi-staking/programs/defi-staking/: Cargo.toml
examples/defi-staking/programs/defi-staking/src/: generated.rs  lib.rs
examples/defi-staking/schema/: staking.lumos
examples/gaming-inventory/: Anchor.toml  README.md
examples/gaming-inventory/app/src/: game-client.ts  generated.ts
examples/gaming-inventory/programs/gaming-inventory/: Cargo.toml
examples/gaming-inventory/schema/: game.lumos
examples/nft-marketplace/: Anchor.toml  README.md
examples/nft-marketplace/app/src/: generated.ts
examples/nft-marketplace/programs/nft-marketplace/: Cargo.toml
examples/nft-marketplace/programs/nft-marketplace/src/: lib.rs  (+1 more)
examples/nft-marketplace/schema/: marketplace.lumos
examples/token-vesting/: Anchor.toml  README.md
examples/token-vesting/app/src/: generated.ts  vesting-client.ts
examples/token-vesting/programs/token-vesting/: Cargo.toml
examples/token-vesting/schema/: vesting.lumos
(+4 files in other folders)
