[package]
name = "dao-governance"
version = "0.1.0"
description = "DAO governance program using LUMOS-generated types"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dao_governance"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
