[package]
name = "defi-staking"
version = "0.1.0"
description = "DeFi staking program using LUMOS-generated types"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "defi_staking"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
